Resolve contrast with using observer

--- a/components/src/offerwall/components/install-required/install-required.css
+++ b/components/src/offerwall/components/install-required/install-required.css
@@ -61,8 +61,7 @@ h2 {
   border-radius: var(--Radius-Moderate-rounding);
 
   background: var(--accent-color);
-  color: white;
-  color: contrast-color(var(--accent-color));
+  color: var(--fallback-contrast-color, white);
 }
 
 .step-icon {
